<resources>
    <string name="app_name">EstudiarCasa</string>
    <string name="blanco">Blanco</string>
    <string name="rojo">Rojo</string>
    <string name="negro">Negro</string>
    <string name="gris">Gris</string>
    <string name="azul">Azul</string>
    <string name="cian">Cian</string>
    <string name="violeta">Violeta</string>
    <string name="verde">Verde</string>
    <string name="amarillo">Amarillo</string>
    <string name="naranja">Naranja</string>
    <string name="eligeColor">Elige un color</string>
</resources>