<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/fondoDialog">

    <LinearLayout
        android:id="@+id/izq"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/bttnChangeColorDialog">

        <TextView
            android:id="@+id/et_elegir_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/eligeColor"
            android:textColor="@color/Blanco"
            android:textAlignment="center"
            android:textStyle="bold">

        </TextView>

        <RadioGroup
            android:id="@+id/rgColores"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/rbBlanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/blanco"
                android:textColor="@color/Blanco"
                app:buttonTint="@color/Blanco" />

            <RadioButton
                android:id="@+id/rbRed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rojo"
                android:textColor="@color/Blanco"
                android:buttonTint="@color/Rojo" />

            <RadioButton
                android:id="@+id/rbOrange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/naranja"
                android:textColor="@color/Blanco"
                app:buttonTint="@color/Naranja" />

            <RadioButton
                android:id="@+id/rbYellow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/amarillo"
                android:textColor="@color/Blanco"
                app:buttonTint="@color/Amarillo" />

            <RadioButton
                android:id="@+id/rbGreen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/verde"
                android:textColor="@color/Blanco"
                app:buttonTint="@color/Verde" />

            <RadioButton
                android:id="@+id/rbCian"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/cian"
                android:textColor="@color/Blanco"
                app:buttonTint="@color/Cian" />

            <RadioButton
                android:id="@+id/rbBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/azul"
                android:textColor="@color/Blanco"
                app:buttonTint="@color/Azul" />

            <RadioButton
                android:id="@+id/rbViolet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/violeta"
                android:textColor="@color/Blanco"
                app:buttonTint="@color/Violeta" />
            <RadioButton
                android:id="@+id/rbGris"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/gris"
                android:textColor="@color/Blanco"
                app:buttonTint="@color/Gris" />
            <RadioButton
                android:id="@+id/rbBlack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/negro"
                android:textColor="@color/Blanco"
                app:buttonTint="@color/Negro"  />




        </RadioGroup>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/bttnChangeColorDialog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/bttonDialog"
        app:layout_constraintTop_toBottomOf="@id/izq"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <TextView
            android:id="@+id/aplicarColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Aplicar color"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="@color/Blanco"
            android:textStyle="bold">
        </TextView>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>